--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
               </svg>
         </label>
-        <a href="/index.html"><img src="Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
+        <a href="index.html"><img src="Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
         <nav class="navbar">
             <ul>
                 <li><a href="/index.html" id="inicio">INICIO</a></li>
