--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <a href="index.html"><img src="Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
         <nav class="navbar">
             <ul>
-                <li><a href="/index.html" id="inicio">INICIO</a></li>
-                <li><a href="/productos.html">PRODUCTOS</a></li>
+                <li><a href="index.html" id="inicio">INICIO</a></li>
+                <li><a href="productos.html">PRODUCTOS</a></li>
                 <li><a href="#footer">CONTACTANOS</a></li>
-                <li><a href="/Informacion.html">SOBRE NOSOTROS</a></li>
+                <li><a href="Informacion.html">SOBRE NOSOTROS</a></li>
             </ul>
 
         </nav>
