--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 <section>
     <section class="ofert conteiner">
          <div class="ofert-1">
-          <a href="producto1.html"> <img src="Imagenes de productos/Buzo-Corto-Mujer-Militar.png" alt=""></a>
+          <a href="producto1.html"> <img src="/Imagenes de productos/Buzo-Corto-Mujer-Militar.png" alt=""></a>
          </div>
 
          <div class="ofert-1">
-            <a href="producto3.html"> <img src="Imagenes de productos/Buzo-Mujer-Canguro-con-Estampa.png" alt=""></a>
+            <a href="producto3.html"> <img src="/Imagenes de productos/Buzo-Mujer-Canguro-con-Estampa.png" alt=""></a>
            </div>
 
            <div class="ofert-1">
-            <a href="producto6.html"> <img src="Imagenes de productos/Buzo-Mujer-Rustico.png" alt=""></a>
+            <a href="producto6.html"> <img src="/Imagenes de productos/Buzo-Mujer-Rustico.png" alt=""></a>
            </div>
 </section>
 
