--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         <div class="ayuda">
             <h3>AYUDA</h3>
             <ul>
-                <li><a href="/Informacion.html">PREGUNTAS FRECUENTES</a></li>
-                <li><a href="/Informacion.html">FORMAS DE PAGO</a></li>
-                <li><a href="/Informacion.html">ENVIOS</a></li>
+                <li><a href="Informacion.html">PREGUNTAS FRECUENTES</a></li>
+                <li><a href="Informacion.html">FORMAS DE PAGO</a></li>
+                <li><a href="Informacion.html">ENVIOS</a></li>
             </ul>
         </div>
 
         <div class="logofooter">
-            <img src="/Logos del emprendimiento/Logo.jpg" alt="">
+            <img src="Logos del emprendimiento/Logo.jpg" alt="">
         </div>
 
         <div class="redes">
