--- a/producto16.html
+++ b/producto16.html
@@ -46,9 +46,9 @@
     </header>
 
 
-<main class="product-1">
+<main class="product-1" id="product1"> 
     <div class="container-img"> 
-        <img src="/Imagenes de productos/Remera-Mujer Manga-Corta-Con-Volado.png" alt="">
+        <img src="Imagenes de productos/Remera-Mujer Manga-Corta-Con-Volado.png" alt="">
     </div>
     
     <div class="container-info-product">
