--- a/producto19.html
+++ b/producto19.html
@@ -47,8 +47,8 @@
 
 
 <main class="product-1">
-    <div class="container-img"> 
-        <img src="/Imagenes de productos/Vestido-Mujer-Con-Volados.png" alt="">
+    <div class="container-img" id="product1"> 
+        <img src="Imagenes de productos/Vestido-Mujer-Con-Volados.png" alt="">
     </div>
     
     <div class="container-info-product">
