--- a/productos.html
+++ b/productos.html
@@ -23,7 +23,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html" id="inicio">INICIO</a></li>
-                    <li><a href="/roductos.html">PRODUCTOS</a></li>
+                    <li><a href="productos.html">PRODUCTOS</a></li>
                     <li><a href="#footer">CONTACTANOS</a></li>
                     <li><a href="Informacion.html">SOBRE NOSOTROS</a></li>
                 </ul>
