--- a/producto18.html
+++ b/producto18.html
@@ -46,9 +46,9 @@
     </header>
 
 
-<main class="product-1">
+<main class="product-1" id="product1">
     <div class="container-img"> 
-        <img src="/Imagenes de productos/Short-Mujer-Fibrana.png" alt="">
+        <img src="Imagenes de productos/Short-Mujer-Fibrana.png" alt="">
     </div>
     
     <div class="container-info-product">
