--- a/producto5.html
+++ b/producto5.html
@@ -46,7 +46,7 @@
     </header>
 
 
-<main class="product-1">
+<main class="product-1" id="product1">
     <div class="container-img"> 
         <img src="Imagenes de productos/Camiseta-Bretel Mujer-Puntilla.png" alt="">
     </div>
