--- a/producto10.html
+++ b/producto10.html
@@ -16,13 +16,13 @@
                     <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
                   </svg>
             </label>
-            <a href="/index.html"><img src="/Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
+            <a href="index.html"><img src="Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/index.html" id="inicio">INICIO</a></li>
-                    <li><a href="/productos.html">PRODUCTOS</a></li>
+                    <li><a href="index.html" id="inicio">INICIO</a></li>
+                    <li><a href="productos.html">PRODUCTOS</a></li>
                     <li><a href="#footer">CONTACTANOS</a></li>
-                    <li><a href="/Informacion.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="Informacion.html">SOBRE NOSOTROS</a></li>
                 
                 </ul>
     
@@ -46,7 +46,7 @@
     </header>
 
 
-<main class="product-1 id="product1"">
+<main class="product-1" id="product1">
     <div class="container-img"> 
         <img src="Imagenes de productos/Pantalón-Mujer-Jean.png" alt="">
     </div>
@@ -124,14 +124,14 @@
         <div class="ayuda">
             <h3>AYUDA</h3>
             <ul>
-                <li><a href="/Informacion.html">PREGUNTAS FRECUENTES</a></li>
-                <li><a href="/Informacion.html">FORMAS DE PAGO</a></li>
-                <li><a href="/Informacion.html">ENVIOS</a></li>
+                <li><a href="Informacion.html">PREGUNTAS FRECUENTES</a></li>
+                <li><a href="Informacion.html">FORMAS DE PAGO</a></li>
+                <li><a href="Informacion.html">ENVIOS</a></li>
             </ul>
         </div>
 
         <div class="logofooter">
-            <img src="/Logos del emprendimiento/Logo.jpg" alt="">
+            <img src="Logos del emprendimiento/Logo.jpg" alt="">
         </div>
 
         <div class="redes">
