--- a/producto8.html
+++ b/producto8.html
@@ -19,10 +19,10 @@
             <a href="/index.html"><img src="/Logos del emprendimiento/logo-icono.png" alt="" class="logo"></a>
             <nav class="navbar">
                 <ul>
-                    <li><a href="/index.html" id="inicio">INICIO</a></li>
-                    <li><a href="/productos.html">PRODUCTOS</a></li>
+                    <li><a href="index.html" id="inicio">INICIO</a></li>
+                    <li><a href="productos.html">PRODUCTOS</a></li>
                     <li><a href="#footer">CONTACTANOS</a></li>
-                    <li><a href="/Informacion.html">SOBRE NOSOTROS</a></li>
+                    <li><a href="Informacion.html">SOBRE NOSOTROS</a></li>
                 
                 </ul>
     
@@ -125,14 +125,14 @@
         <div class="ayuda">
             <h3>AYUDA</h3>
             <ul>
-                <li><a href="/Informacion.html">PREGUNTAS FRECUENTES</a></li>
-                <li><a href="/Informacion.html">FORMAS DE PAGO</a></li>
-                <li><a href="/Informacion.html">ENVIOS</a></li>
+                <li><a href="Informacion.html">PREGUNTAS FRECUENTES</a></li>
+                <li><a href="Informacion.html">FORMAS DE PAGO</a></li>
+                <li><a href="Informacion.html">ENVIOS</a></li>
             </ul>
         </div>
 
         <div class="logofooter">
-            <img src="/Logos del emprendimiento/Logo.jpg" alt="">
+            <img src="Logos del emprendimiento/Logo.jpg" alt="">
         </div>
 
         <div class="redes">
